--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 }
 body{
-    background-image: url(../../c0c44d6e37f0a71a4723e9385890f60e.jpg);
+    background-image: url(tv.jpg);
     background-size: 50%;
     background-repeat: no-repeat;
     background-position: center;
